--- a/.github/workflows/update_gossip.yml
+++ b/.github/workflows/update_gossip.yml
@@ -5,7 +5,7 @@ on:
     - cron: '0 * * * *' # Runs every hour
   workflow_dispatch: # Allows manual triggering
   push:
-    branches: ["main"] # Also runs on pushes to main branch
+    branches: ["main"]
 
 permissions:
   contents: write
@@ -20,24 +20,34 @@ jobs:
   update-gossip:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python
-      uses: actions/setup-python@v4
+    - uses: actions/checkout@v4      # Updated from v3
       with:
-        python-version: '3.x'
+        fetch-depth: 1               # Optimize for shallow clone
+
+    - name: Set up Python
+      uses: actions/setup-python@v5   # Updated from v4
+      with:
+        python-version: '3.11'        # Specify exact version
+        cache: 'pip'                  # Enable pip caching
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install feedparser pytz python-dateutil
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        if [ -f requirements.txt ]; then
+          pip install -r requirements.txt
+        else
+          pip install feedparser pytz python-dateutil
+        fi
+
     - name: Run update script
       run: python scripts/update_gossip.py
+
     - name: Commit and push if changed
       run: |
-        git config --global user.email "action@github.com"
-        git config --global user.name "GitHub Action"
+        git config --global user.email "github-actions[bot]@users.noreply.github.com"
+        git config --global user.name "github-actions[bot]"
         git add -A
-        git diff --quiet && git diff --staged --quiet || (git commit -m "Update gossip data" && git push)
+        git diff --quiet && git diff --staged --quiet || (git commit -m "Update gossip data [skip ci]" && git push)
 
   deploy-to-github-pages:
     needs: update-gossip
@@ -47,13 +57,17 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     steps:
     - name: Checkout
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4    # Updated from v3
+
     - name: Setup Pages
-      uses: actions/configure-pages@v3
+      uses: actions/configure-pages@v4  # Updated from v3
+
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v3
       with:
-        path: '.' # Upload the entire repository
+        path: '.'
+        retention-days: 1          # Minimize storage usage
+
     - name: Deploy to GitHub Pages
       id: deployment
       uses: actions/deploy-pages@v4
