--- a/.github/workflows/clean-gossip.yml
+++ b/.github/workflows/clean-gossip.yml
@@ -22,7 +22,7 @@ jobs:
         run: |
           const fs = require('fs');
 
-          // Read existing celebrities (permanent list that only grows)
+          // Read existing celebrities
           const celebsList = fs.readFileSync('celebrities.txt', 'utf8')
             .split('\n')
             .filter(Boolean)
@@ -31,56 +31,7 @@ jobs:
           const filePath = 'data/gossip_data.json';
           const data = JSON.parse(fs.readFileSync(filePath, 'utf8'));
 
-          // Track mentions in current cycle
-          const mentionCounts = new Map();
-          celebsList.forEach(celeb => mentionCounts.set(celeb, 0));
-
-          // Track potential new celebrities
-          const newNameFrequencies = new Map();
-          const properNameRegex = /([A-Z][a-z]+(?:\s+[A-Z][a-z]+)*)/g;
-
-          [...data.entries, ...data.fallback_entries].forEach(entry => {
-            const text = `${entry.title} ${entry.description || ''}`.toLowerCase();
-
-            // Count existing celebrity mentions
-            celebsList.forEach(celeb => {
-              if (text.includes(celeb)) {
-                mentionCounts.set(celeb, mentionCounts.get(celeb) + 1);
-              }
-            });
-
-            // Track new names
-            const matches = text.match(properNameRegex) || [];
-            matches.forEach(name => {
-              const normalized = name.toLowerCase().trim();
-              if (!celebsList.includes(normalized)) {
-                newNameFrequencies.set(name, (newNameFrequencies.get(name) || 0) + 1);
-              }
-            });
-          });
-
-          // Get dormant celebrities for not.txt (rewritten daily)
-          const dormantCelebs = Array.from(mentionCounts.entries())
-            .filter(([_, count]) => count === 0)
-            .map(([name]) => name)
-            .sort();
-
-          // Get new celebrities to add to permanent list
-          const newCelebs = Array.from(newNameFrequencies.entries())
-            .filter(([_, count]) => count >= 3)
-            .map(([name]) => name)
-            .sort();
-
-          // Update not.txt (gets rewritten daily)
-          fs.writeFileSync('not.txt', dormantCelebs.join('\n') + '\n');
-
-          // Update celebrities.txt (only grows)
-          if (newCelebs.length > 0) {
-            const newContent = [...new Set([...celebsList, ...newCelebs])].sort().join('\n');
-            fs.writeFileSync('celebrities.txt', newContent + '\n');
-          }
-
-          // Clean old entries (7 days)
+          // Clean old entries first (7 days)
           const now = new Date();
           const cutoffDate = new Date(now.setDate(now.getDate() - 7));
 
@@ -92,8 +43,63 @@ jobs:
             .filter(entry => new Date(entry.published) > cutoffDate)
             .sort((a, b) => new Date(b.published) - new Date(a.published));
 
-          // Update JSON with current lists
+          // Reset tracking maps for fresh daily counts
+          const mentionCounts = new Map();
+          const newNameFrequencies = new Map();
+          const properNameRegex = /([A-Z][a-z]+(?:\s+[A-Z][a-z]+)*)/g;
+
+          celebsList.forEach(celeb => mentionCounts.set(celeb, 0));
+
+          // Only count mentions from current entries
+          [...data.entries, ...data.fallback_entries].forEach(entry => {
+            const textLower = `${entry.title} ${entry.description || ''}`.toLowerCase();
+            const textOriginal = `${entry.title} ${entry.description || ''}`;
+
+            // Count existing celebrity mentions
+            celebsList.forEach(celeb => {
+              if (textLower.includes(celeb)) {
+                mentionCounts.set(celeb, mentionCounts.get(celeb) + 1);
+              }
+            });
+
+            // Track potential new names (keeping original case)
+            const matches = textOriginal.match(properNameRegex) || [];
+            matches.forEach(name => {
+              const normalized = name.toLowerCase().trim();
+              if (!celebsList.includes(normalized)) {
+                newNameFrequencies.set(name, (newNameFrequencies.get(name) || 0) + 1);
+              }
+            });
+          });
+
+          // Process upcoming names (2+ mentions in current entries)
+          const upcomingNames = Array.from(newNameFrequencies.entries())
+            .filter(([_, count]) => count >= 2 && count < 3)
+            .map(([name, count]) => [name, count])
+            .sort((a, b) => b[1] - a[1]);
+
+          // Get new celebrities (3+ mentions)
+          const newCelebs = Array.from(newNameFrequencies.entries())
+            .filter(([_, count]) => count >= 3)
+            .map(([name]) => name);
+
+          // Get dormant celebrities
+          const dormantCelebs = Array.from(mentionCounts.entries())
+            .filter(([_, count]) => count === 0)
+            .map(([name]) => name)
+            .sort();
+
+          // Update files
+          fs.writeFileSync('not.txt', dormantCelebs.join('\n') + '\n');
+
+          if (newCelebs.length > 0) {
+            const updatedCelebs = [...new Set([...celebsList, ...newCelebs.map(name => name.toLowerCase())])];
+            fs.writeFileSync('celebrities.txt', updatedCelebs.sort().join('\n') + '\n');
+          }
+
+          // Reset and update JSON structure daily
           data.not_this_week = dormantCelebs;
+          data.upcoming_new_names = upcomingNames; // Fresh daily list
 
           fs.writeFileSync(filePath, JSON.stringify(data, null, 2));
         shell: node {0}
@@ -106,6 +112,6 @@ jobs:
           if git diff --quiet && git diff --staged --quiet; then
             echo "No changes to commit"
           else
-            git commit -m "chore: update celebrity lists and clean entries"
+            git commit -m "chore: daily refresh of lists and upcoming names"
             git push
           fi
