--- a/.github/workflows/clean-gossip.yml
+++ b/.github/workflows/clean-gossip.yml
@@ -1,7 +1,7 @@
 name: Clean Old Gossip Entries and Track Celebrities
 on:
   schedule:
-    - cron: '0 * * * *'  # Runs hourly
+    - cron: '30 * * * *'  # Runs at 30 minutes past every hour
   workflow_dispatch:      # Allows manual trigger
 
 jobs:
@@ -25,7 +25,7 @@ jobs:
 
       - name: Upload logs
         if: always()
-        uses: actions/upload-artifact@v4  # Updated from v2 to v4
+        uses: actions/upload-artifact@v4
         with:
           name: cleanup-logs
           path: cleanup.log
